<resources>
    <string name="app_name">diplom</string>
    <string name="karta_api" templateMergeStrategy="preserve" translatable="false">AIzaSyC707BrcLUDlHNBxQHp06ommRVSp-BjRYM</string>
    <string name="aboutpril_name">О приложении</string>
    <string name="akcii_name">Акции</string>
    <string name="catalog_name">Каталог</string>
    <string name="korzina_name">Корзина</string>
    <string name="magazini_name">Магазины</string>
    <string name="profil_name">Профиль</string>
    <string name="adresadostavok_name">Адреса доставок</string>
    <string name="calendardostavok_name">Календарь доставок</string>
    <string name="hidemagazini_name">Скрытые магазины</string>
    <string name="infoforclient_name">Информация для клиентов</string>
    <string name="mykarti_name">Мои карты</string>
    <string name="myotzivi_name">Мои отзывы</string>
    <string name="myzakazi_name">Мои заказы</string>
    <string name="settings_name">Настройки</string>
    <string name="techsupport_name">Техническая поддержка</string>
    <string name="notifications_name">Уведомления</string>
    <string name="currency_name">Валюта</string>
    <string name="apptheme_name">Тема приложения</string>
    <string name="applanguange_name">Язык приложения</string>
    <string name="logout_name">Выйти из приложения</string>
    <string name="deleteaccount_name">Удалить аккаунт</string>
    <string name="workWithApp_name">Работа с приложением</string>
    <string name="workWIthAccount_name">Работа с аккаунтом</string>
    <string name="delivery_name">Доставка</string>
    <string name="paymentMethods_name">Способы оплаты</string>
    <string name="vozvratSredstv_name">Возврат средств</string>
    <string name="politConfid_name">Политика конфиденциальности</string>
    <string name="aboutUs_name">О нас</string>
    <string name="contacts_name">Контакты</string>
    <string name="login_name">Вход</string>
    <string name="vvodDann_name">Ввод данных пользователя</string>
    <string name="nachStran_name">Приветственная страница</string>
    <string name="zaregistr_name">Зарегистрироваться</string>
    <string name="voiti_name">Войти</string>
    <string name="zaregPoz_name">Зарегистрироваться позже</string>
    <string name="ima_name">Имя</string>
    <string name="familia_name">Фамилия</string>
    <string name="numberTelephone_name">Номер телефона</string>
    <string name="email_name">Адрес электроной почты</string>
    <string name="password_name">Пароль</string>
    <string name="downloadphoto_name">Загрузить фотографию</string>



</resources>