<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3D3D3D"
    android:gravity="fill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables"
    tools:context=".NachStranActivity">


    <Button
        android:id="@+id/buttonRegistrationPerehod"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/zaregistr_name"
        android:layout_marginTop="200dp"
        android:background="@drawable/allcornerslightgrayroundedbackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonVoiti"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/voiti_name"
        android:layout_marginTop="15dp"
        android:background="@drawable/allcornersdarkthemeroundedbackground"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrationPerehod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textZaregPoz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zaregPoz_name"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>