<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3D3D3D"
    android:gravity="fill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables"
    tools:context=".VvodDannPolzActivity">



    <TextView
        android:id="@+id/textIma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ima_name"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textFieldIma"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/textFieldIma"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/allcornerslightgrayroundedbackground"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIma"
        tools:ignore="labelFor" />

    <TextView
        android:id="@+id/textFamiliya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/familia_name"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textFieldFamiliya"
        app:layout_constraintTop_toBottomOf="@+id/textFieldIma" />

    <EditText
        android:id="@+id/textFieldFamiliya"
        tools:ignore="labelFor"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:background="@drawable/allcornerslightgrayroundedbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFamiliya"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberTelephone_name"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textFieldPhone"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFamiliya" />

    <EditText
        android:id="@+id/textFieldPhone"
        tools:ignore="labelFor"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:text=""
        android:background="@drawable/allcornerslightgrayroundedbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPhone"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_name"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textFieldEmail"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPhone" />

    <EditText
        android:id="@+id/textFieldEmail"
        tools:ignore="labelFor"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:background="@drawable/allcornerslightgrayroundedbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_name"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

    <EditText
        android:id="@+id/textFieldPassword"
        tools:ignore="labelFor"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:background="@drawable/allcornerslightgrayroundedbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textPhotoDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadphoto_name"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/zaregistr_name"
        android:background="@drawable/allcornersdarkthemeroundedbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhotoDownload"/>




</androidx.constraintlayout.widget.ConstraintLayout>