<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3D3D3D"
    android:gravity="fill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables"
    tools:context=".InfoForClientActivity">


    <LinearLayout
        android:id="@+id/hatInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="#616161"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/arr"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:scaleX="-1"
            android:layout_weight="1"
            android:contentDescription="NULL"
            android:onClick="profClicked"
            android:src="@drawable/arrow"/>
        <TextView
            android:id="@+id/titleM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/infoforclient_name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_weight="2"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/chat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:contentDescription="NULL"
            android:onClick="techClicked"
            android:src="@drawable/chat"/>
    </LinearLayout>

    <TextView
        android:id="@+id/Button1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/workWithApp_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/topcornerslightggrayroundedbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatInfo"/>
    <TextView
        android:id="@+id/Button2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/workWIthAccount_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@color/lightgray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1"/>
    <TextView
        android:id="@+id/Button3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/delivery_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@color/lightgray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button2"/>
    <TextView
        android:id="@+id/Button4"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/paymentMethods_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@color/lightgray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button3"/>
    <TextView
        android:id="@+id/Button5"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/vozvratSredstv_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@color/lightgray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button4"/>
    <TextView
        android:id="@+id/Button6"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/politConfid_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@drawable/bottomcornerslightgrayroundedbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button5"/>
    <TextView
        android:id="@+id/Button7"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/aboutUs_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/topcornerslightggrayroundedbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button6"/>
    <TextView
        android:id="@+id/Button8"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/contacts_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:background="@drawable/bottomcornerslightgrayroundedbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button7"/>

    <LinearLayout
        android:id="@+id/menuInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#616161"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mag"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="NULL"
                android:focusable="true"
                android:onClick="magClicked"
                android:src="@drawable/map" />
            <TextView
                android:id="@+id/textMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:textColor="#000000"
                android:text="@string/magazini_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mag_to_cat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="catClicked"
                android:contentDescription="NULL"
                android:src="@drawable/catalog"/>
            <TextView
                android:id="@+id/textCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/catalog_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mag_to_kor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="korClicked"
                android:contentDescription="NULL"
                android:src="@drawable/korzina"/>
            <TextView
                android:id="@+id/textKor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/korzina_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mag_to_ak"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="akClicked"
                android:contentDescription="NULL"
                android:src="@drawable/akzii"/>
            <TextView
                android:id="@+id/textAkz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/akcii_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mag_to_prof"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="profClicked"
                android:contentDescription="NULL"
                android:src="@drawable/profile"/>
            <TextView
                android:id="@+id/textPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/profil_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>