<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3D3D3D"
    android:gravity="fill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:id="@+id/hatSettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#616161"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/arr"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:scaleX="-1"
            android:layout_weight="1"
            android:contentDescription="NULL"
            android:src="@drawable/arrow"/>
        <TextView
            android:id="@+id/titleM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_weight="2"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/tech"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:contentDescription="NULL"
            android:src="@drawable/chat"/>
    </LinearLayout>

    <TextView
        android:id="@+id/buttonNotifications"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/notifications_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:gravity="center_vertical"
        android:shadowRadius="10"
        android:layout_weight="2"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/topcornerslightggrayroundedbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatSettings" />

    <TextView
        android:id="@+id/buttonAppTheme"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:background="@color/lightgray"
        android:gravity="center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/apptheme_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonNotifications"
        app:layout_constraintStart_toStartOf="@+id/buttonNotifications"
        app:layout_constraintTop_toBottomOf="@+id/buttonNotifications" />

    <TextView
        android:id="@+id/buttonLogOut"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:background="@color/lightgray"
        android:gravity="center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/logout_name"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonAppTheme"
        app:layout_constraintStart_toStartOf="@+id/buttonAppTheme"
        app:layout_constraintTop_toBottomOf="@+id/buttonAppTheme" />

    <TextView
        android:id="@+id/buttonDeleteAccount"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:background="@drawable/bottomcornerslightgrayroundedbackground"
        android:gravity="center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/deleteaccount_name"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogOut"
        app:layout_constraintStart_toStartOf="@+id/buttonLogOut"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />

    <LinearLayout
        android:id="@+id/menuSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#616161"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mag"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/magazini_name"
                android:focusable="true"
                android:src="@drawable/map" />
            <TextView
                android:id="@+id/textMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:textColor="@color/black"
                android:text="@string/magazini_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/catalog_name"
                android:src="@drawable/catalog"/>
            <TextView
                android:id="@+id/textCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/catalog_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/kor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/korzina_name"
                android:src="@drawable/korzina"/>
            <TextView
                android:id="@+id/textKor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/korzina_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ak"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/akcii_name"
                android:src="@drawable/akzii"/>
            <TextView
                android:id="@+id/textAkz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/akcii_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/prof"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/profil_name"
                android:src="@drawable/profile"/>
            <TextView
                android:id="@+id/textPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/profil_name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>